# terra-ml

./: pyproject.toml  train copy.ipynb  train.ipynb  train.py
checkpoints/: ckpt-1.index  ckpt-2.index  ckpt-3.index  ckpt-4.index  ckpt-5.index
